--- a/a.bib
+++ b/a.bib
@@ -461,3 +461,27 @@ publisher={JSTOR}
     year={2009},
     publisher={SIAM}
 }
+@article{jacobs2014unified,
+    title={A unified view of generative models for networks: models, methods, opportunities, and challenges},
+    author={Jacobs, Abigail Z and Clauset, Aaron},
+    journal={arXiv preprint arXiv:1411.4070},
+    year={2014}
+}
+@inproceedings{hoff2008modeling,
+    title={Modeling homophily and stochastic equivalence in symmetric relational data},
+    author={Hoff, Peter},
+    booktitle={Advances in Neural Information Processing Systems},
+    pages={657--664},
+    year={2008}
+}
+
+@article{bickel2009nonparametric,
+    title={A nonparametric view of network models and Newman--Girvan and other modularities},
+    author={Bickel, Peter J and Chen, Aiyou},
+    journal={Proceedings of the National Academy of Sciences},
+    volume={106},
+    number={50},
+    pages={21068--21073},
+    year={2009},
+    publisher={National Acad Sciences}
+}
