--- a/related_work.tex
+++ b/related_work.tex
@@ -7,3 +7,5 @@
 
 %to read: Stochastic blockmodels and community structure in networks
 
+Recently, the MMSB \cite{MMSB} and ILFM {ILFM} has been successfully used for link prediction and structure discovery in social networks. Several extensions, has been proposed. In \cite{AMMSB}, they proposed a MMSB model that scale well using stochastic variational inference and use it for the discovery of overlapping communities in big networks (millions of nodes). They constrained the $\Phi$ matrix  to have weights in the diagonal and a fixed small value else where and named a-MMSB where "a" stand for assortative. The MMSB model has also been extended to a nonparametric dynamic version to handle temporal networks \cite{fan2015dynamic}. ILFM has also been extended in several way; to handle non-negative weights in \cite{IMRM} and within a more subtle latent feature structure in \cite{ILAM}. Nevertheless the characterisation of models with regards to the properties for networks remains to be explored \cite{jacobs2014unified}. Theoretical results on the structure of random graph under exchangeability assumptions are however well reported in \cite{orbanz2015bayesian}, although the characterisation of social networks properties within a Bayesian framework is not covered. In \cite{hoff2008modeling}, the role of exchangeability was first pointed out and its relation to the data representation. In \cite{hoff2008modeling}, the role of exchangeability was first pointed out and its relation to the data representation where  where they gives a first shot on the study of homophily and structural equivalence in different model settings. An other important use of the exchangeability assumptions, in \cite{bickel2009nonparametric} where they studied the asymptotic comportment of the likelihood in the blockmodel settings, showing that the inference of the likelihood lead to a consistent estimation of the community structure.
+
